<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/settings_title">

    <SwitchPreference
        android:key="settings_theme"
        android:title="@string/settings_theme"
        app:iconSpaceReserved="false" />

    <Preference
        android:key="settings_qrcode_key"
        android:title="@string/settings_account"
        android:widgetLayout="@layout/icon_next"
        app:iconSpaceReserved="false" />

    <PreferenceCategory>

        <Preference
            android:key="settings_privacy_policy_key"
            android:title="@string/settings_privacy_policy"
            android:widgetLayout="@layout/icon_next"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="settings_about_key"
            android:title="@string/settings_about"
            android:widgetLayout="@layout/icon_next"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>