<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tab_layout"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        style="?attr/tabSecondaryStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tabIndicatorHeight="0dp">

        <com.google.android.material.tabs.TabItem
            android:icon="@drawable/ic_tabs_home"
            android:tag="home"
            android:text="@string/shop_tabs_label_home" />

        <com.google.android.material.tabs.TabItem
            android:icon="@drawable/ic_tabs_class"
            android:tag="class"
            android:text="@string/shop_tabs_label_class" />

        <com.google.android.material.tabs.TabItem
            android:icon="@drawable/ic_tabs_cart"
            android:tag="cart"
            android:text="@string/shop_tabs_label_cart" />

        <com.google.android.material.tabs.TabItem
            android:icon="@drawable/ic_tabs_account"
            android:tag="account"
            android:text="@string/shop_tabs_label_account" />

    </com.google.android.material.tabs.TabLayout>

</androidx.constraintlayout.widget.ConstraintLayout>